2009-11-22 Mike Frysinger <vapier@gentoo.org>
	* doc/syntax/gentoo.nanorc: Tweak comment highlighting.

GNU nano 2.1.99pre2 - 2009.11.21
2009-11-21 Chris Allegretta <chrisa@asty.org>
	* rcfile.c: Add unbinding keyword, fixes Savannah bug 22852 reported by frankd.
	* prompt.c (update_statusbar_line): Set statusbar_pww when updating the line.
	  Fixes Savannah bug 24957 by Mike Frysinger.

2009-11-19 Chris Allegretta <chrisa@asty.org>
	* nano.c (die_save_file) Try nd match the permissions of the file we were
	  editing but only make a minimal effort to do so. Fixes Savannah bug 27273
	  reported by Mike Frysinger.

2009-11-18 Adrian Bunk <bunk via Savannah>
	* nano.c (main): Allow --fill and --nowrap to override nanorc entries and each other
          on the command line.

2009-11-15 Chris Allegretta <chrisa@asty.org>
	* winio.c (edit_refresh): Always computer maxsize regardless of whether smooth scrolling
	  is enabled.  Fixes Savannah bug 28024 by Mike Frysinger.

GNU nano 2.1.99pre1 - 2009.11.15
2009-11-14 Chris Allegretta <chrisa@asty.org>
	* move.c (do_first_line, do_last_line): Just set edit_refresh_needed rather than 
	  get messy.
	* files.c (do_writeout) - Only mention file modification if we're writing the same
	  file we originally opened.

2009-11-13 Chris Allegretta <chrisa@asty.org>
	* winio.c: Add new static maxsize to be able to easier calculation with
	  softwrap.
	* nano.c (do_mouse): Fix mouse support not working with soft wrapping.  Fixes
	  Savannah bug 27549 reported by Hannes Schueller.

2009-11-11 Chris Allegretta <chrisa@asty.org>
	* winio.c: Large tweaking of cursor and text display based on COLS not COLS - 1, 
	  due to finally understanding that display_string wasn't being called properly
	  when softwrap was enabled.  Fixes Savnnah bug 27603, Return key doesn't scroll 
	  viewport reported by Hannes Schueller.
	* - Fix size_t formatting issues with -pedantic

2009-11-09 Chris Allegretta <chrisa@asty.org>