@@ -1,5 +1,4 @@
 ** Open BUGS **
-- Cutting the line at the top of the screen recenters to center (71)
 
 ** Fixed BUGS **
 - Marked cutting sometimes leaves a newline in the file unintelligently,
@@ -156,6 +155,7 @@
   assigned to it (79 - may not be worth fixing) [FIXED]
 - Segfault editing at COLS presumably due to new color syntax 
   highlighting (80) [FIXED]
+- Cutting the line at the top of the screen recenters to center (71) [FIXED]
 
 
 $Id$
